[package]
name = "blog-engine"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
pulldown-cmark = "0.9"
anyhow = "1.0"
thiserror = "2.0"
gray_matter = "0.2"
toml = "0.9.11"
walkdir = "2.5.0"
tera = "1.20.1"
clap = { version = "4.5.57", features = ["derive"] }
notify-debouncer-mini = "0.7.0"
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs"] }
rayon = "1.11.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
serde_json = "1.0.149"

[dev-dependencies]
tempfile = "3.24.0"
